--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -6,18 +6,16 @@
 
 <article class="{{post_class}}">
 	<div class="inner">
-		<a class="post-link" href="{{url absolute="true"}}"></a>
 		{{#if image}}
 		<figure class="post-image">
-			<a href="{{url absolute="true"}}"><img src="{{image}}" alt="" /></a>
+			<a href="{{url}}"><img src="{{image}}" alt="" /></a>
 		</figure>
 		{{/if}}
 		<span class="post-meta">
 			<span class="post-date">{{date format="DD MMM YYYY"}}</span>
 		</span>
-		<h2 class="post-title"><a href="{{url absolute="true"}}">{{{title}}}</a></h2>
-		<p class="post-excerpt">{{excerpt words="15"}}&hellip;</p>
-		<span class="post-more"><a href="{{url absolute="true"}}">Read More <i class="icon-arrow-right"></i></a></span>
+		<h2 class="post-title"><a href="{{url}}">{{{title}}}</a></h2>
+		<p class="post-content">{{content}}</p>
 	</div>
 </article>
 
