1. adjusted spacing 2. tuned color 3. Corrected footer content

--- a/default.hbs
+++ b/default.hbs
@@ -49,8 +49,8 @@
 				
 				<footer id="footer">
 					<section class="credits">
-						<span class="credits-theme">Made by <a href="http://marketica.co">Marktica</a></span>
-						<span class="credits-software">Published with <a href="http://ghost.org">Ghost</a></span>
+						<span class="credits-theme">Theme modified by <a href="http://drzhi.org">Yanling</a> based on <a href="http://marketica.co/item/Stack--Modern-Ghost-Theme">Stack</a></span>
+						<span class="credits-software">Proudly powerd by <a href="http://ghost.org">Ghost</a></span>
 					</section>
 				</footer>
 				<!-- End footer -->
