--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -15,7 +15,9 @@
 			<span class="post-date">{{date format="DD MMM YYYY"}}</span>
 		</span>
 		<h2 class="post-title"><a href="{{url}}">{{{title}}}</a></h2>
-		<p class="post-content">{{content}}</p>
+		<section class="post-content">
+			{{content}}
+		</section>
 	</div>
 </article>
 
