--- a/default.hbs
+++ b/default.hbs
@@ -49,8 +49,8 @@
 				
 				<footer id="footer">
 					<section class="credits">
-						<span class="credits-theme">Theme modified by <a href="http://drzhi.org">Yanling</a> based on <a href="http://marketica.co/item/Stack--Modern-Ghost-Theme">Stack</a></span>
-						<span class="credits-software">Proudly powerd by <a href="http://ghost.org">Ghost</a></span>
+						<span class="credits-theme">Theme based on <a href="http://marketica.co/item/Stack--Modern-Ghost-Theme">Stack</a>, refined by <a href="http://drzhi.org">Dr. Zhi</a></span>
+						<span class="credits-software">Powered by <a href="http://ghost.org">Ghost</a></span>
 					</section>
 				</footer>
 				<!-- End footer -->
