Always use https.

--- a/default.hbs
+++ b/default.hbs
@@ -49,8 +49,8 @@
 				
 				<footer id="footer">
 					<section class="credits">
-						<span class="credits-theme">Theme based on <a href="http://marketica.co/item/Stack--Modern-Ghost-Theme">Stack</a>, refined by <a href="http://drzhi.org">Dr. Zhi</a></span>
-						<span class="credits-software">Powered by <a href="http://ghost.org">Ghost</a></span>
+						<span class="credits-theme">Theme tuned by <a href="https://drzhis.com">Dr. Zhi</a></span>
+						<span class="credits-software">Powered by <a href="https://ghost.org">Ghost</a></span>
 					</section>
 				</footer>
 				<!-- End footer -->
@@ -62,7 +62,7 @@
 		</section>
 		{{ghost_foot}}
 		
-		<script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
+		<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 		<script src="{{asset "js/dependencies.js"}}"></script>
 		<script src="{{asset "js/script.js"}}"></script>
 	</body>
